--- a/index.html
+++ b/index.html
@@ -392,6 +392,8 @@ style="width:100%; height:100%; display:block; margin:auto;" />
         if (item.option) msg += `Opsi: ${item.option}%0A`;
         if (item.note) msg += `Catatan: ${item.note}%0A`;
         msg += `Subtotal: ${item.subtotal.toLocaleString("id-ID")}%0A%0A`;
+        msg += `------------------------------%0A`;
+      msg += `Terima Kasih Telah Belanja di  Sifood. Mau Belanja di Warung Lainnya? klik: https://makmur-hidayat.github.io/Sifood-Home/ . Stanbay Hapenya yah, Kurir Akan Hubungi Kamu`;
       });
 
       msg += `-----------------------------%0A`;
