--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           {
             nama: 'SMOTIES MANGGA',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/dJ7zvDJR/1747140329542v-Smotiess-Mangga021764c786e9785b3-12-11zon.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -151,7 +151,7 @@
           {
             nama: 'SMOTIES NAGA',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/jPggbTgS/1747140322968v-Smotiess-Naga054464c7877956348-13-11zon.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -161,7 +161,7 @@
           {
             nama: 'jus alpukat',
             harga: 15000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/gMTCcTSg/1747140341154v-Jus-Buah-Alpokat018863c39a028d90c-10-11zon.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -171,7 +171,7 @@
           {
             nama: 'jus mangga',
             harga: 15000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://ibb.co.com/jZ3b19wH][img]https://i.ibb.co.com/XkFjvf5V/1747140345891v-Jus-Buah-Mangga070463c3991192cc9-9-11zon.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -181,7 +181,7 @@
           {
             nama: 'jus jeruk',
             harga: 15000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/YT8qHQ5Z/1747140335236v-Jus-Buah-Jeruk021063c3a1c8c07f6-11-11zon.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -201,7 +201,7 @@
           {
             nama: 'Ikan bakar',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/Xxb1ntRL/1747140392654v-Ikan-Panggang018663c69469d511e-6-11zon.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -211,7 +211,7 @@
           {
             nama: 'Ikan gulai',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/tTJBKpXK/1747140410661v-Ikan-Gulai099663be9528141fb-3-11zon.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -221,7 +221,7 @@
           {
             nama: 'Ikan goreng cabe hijau',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/MD5nHR7x/1747140419417v-Ikan-Lado-Ijau093763be93d97fcfc-1-11zon.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -231,7 +231,7 @@
           {
             nama: 'Ayam Bumbu',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/0pVFhGSq/1747140415336v-Ayam-Bumbu045363be946b75b2d-2-11zon.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -241,7 +241,7 @@
           {
             nama: 'Ayam Kecap',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/rrkrHBV/images-3.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -251,7 +251,7 @@
            {
             nama: 'Ayam bakar',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/vv6pPKdt/images-2.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -261,7 +261,7 @@
            {
             nama: 'Ayam goreng cabe hijau',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/KcJVd6Yx/1747140404848v-Ayam-Ladi-Ijau021063be95ab6794a-4-11zon.jpg.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -269,9 +269,19 @@
             aktif: true
             },
           {
+            nama: 'Rendang',
+            harga: 18000,
+            gambar: 'https://i.ibb.co.com/9mf7hTbB/1747140386399v-Rendang-Daging-Sapi019463c6951c89cdf-7-11zon.jpg',
+            topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
+            toppingDipilih: [],
+            qty: 1,
+            catatan: '',
+            aktif: false
+            },
+          {
             nama: 'Ayam gulai',
             harga: 18000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/V0C3BWG1/1747140399374v-Ayam-Gulai078263be965bc90ec-5-11zon.jpg',
             topping: [{ nama: 'Pakai_Nasi', harga: 5000 }, { nama: 'Tanpa_Nasi', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
