--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
           {
             nama: 'jus mangga',
             harga: 15000,
-            gambar: 'https://ibb.co.com/jZ3b19wH][img]https://i.ibb.co.com/XkFjvf5V/1747140345891v-Jus-Buah-Mangga070463c3991192cc9-9-11zon.jpg',
+            gambar: 'https://i.ibb.co.com/XkFjvf5V/1747140345891v-Jus-Buah-Mangga070463c3991192cc9-9-11zon.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
@@ -191,7 +191,7 @@
           {
             nama: 'es teh manis',
             harga: 15000,
-            gambar: 'https://i.ibb.co.com/m5t13X7L/IMG-20250512-015156-11-11zon.jpg',
+            gambar: 'https://i.ibb.co/v6S4hzxh/esteh.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
