--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           {
             nama: 'es teh manis',
             harga: 15000,
-            gambar: 'https://i.ibb.co/v6S4hzxh/esteh.jpg',
+            gambar: 'https://i.ibb.co.com/TxsM1hB1/esteh.jpg',
             topping: [{ nama: 'Tanpa_topping', harga: 0 }],
             toppingDipilih: [],
             qty: 1,
